# icepaper

./: Cargo.toml  LICENSE  justfile
src/: daemon.rs  editor.rs  lib.rs  main.rs  shader.wgsl
